--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lohwenxin/DIY-Chat-Rooms#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "socket.io": "^4.5.2"
   },
   "devDependencies": {
